objects/JBCXM__GSNPSTextAnalytics__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AspectGroup__c</fullName>
        <label>Aspect Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Aspect__c</fullName>
        <label>Aspect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSSurveyResponse__c</fullName>
        <label>NPSSurvey Response</label>
        <referenceTo>JBCXM__SurveyResponse__c</referenceTo>
        <relationshipLabel>NPS Text Analytics</relationshipLabel>
        <relationshipName>NPS_Text_Analytics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__RunDate__c</fullName>
        <label>RunDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SentenceCategory__c</fullName>
        <label>Sentence Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__SentenceId__c</fullName>
        <label>Sentence Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Sentence__c</fullName>
        <label>Sentence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>NPS Text Analytics</label>
    <nameField>
        <displayFormat>STA-{000}</displayFormat>
        <label>NPS Text Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Text Analytics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>